--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h4 {
   grid-area: header-nav;
   -ms-grid-column-align: right;
       justify-self: right;
-  font-size: 20px;
+  font-size: 200ox;
   font-weight: bold;
 }
 
@@ -364,6 +364,7 @@ table.iksweb {
 }
 
 table.iksweb th {
+  font-weight: 50px;
   font-size: 22px;
   color: #ffffff;
   background-color: #9B0921;
@@ -416,6 +417,50 @@ table.iksweb td, table.iksweb th {
   -ms-grid-row-span: 4;
   -ms-grid-column: 1;
   grid-area: picture;
+}
+
+.form-container {
+  width: 1200px;
+  height: 450px;
+  background-color: black;
+  text-align: center;
+}
+
+input {
+  outline: 0 !important;
+}
+
+input[type="text"] {
+  width: 245px;
+  height: 50px;
+  color: #8F8F8F;
+  background-color: #272727;
+}
+
+input[type="email"] {
+  width: 245px;
+  height: 50px;
+  color: #8F8F8F;
+  background-color: #272727;
+}
+
+.name {
+  margin-top: 10px;
+}
+
+.email {
+  margin-top: 10px;
+}
+
+.message {
+  margin-top: 10px;
+}
+
+input[name="message"] {
+  width: 628px;
+  height: 240px;
+  color: #8F8F8F;
+  background-color: #272727;
 }
 
 .button1 {
@@ -514,12 +559,14 @@ table.iksweb td, table.iksweb th {
   grid-area: message;
   -ms-flex-item-align: left;
       -ms-grid-row-align: left;
+      align-self: left;
   color: white;
   margin-left: 20px;
   font-size: 20px;
 }
 
-.send {
+input[type="button"] {
+  width: 632px;
   -ms-grid-row: 5;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
@@ -533,10 +580,8 @@ table.iksweb td, table.iksweb th {
   padding-bottom: 12px;
   font-weight: bold;
   text-transform: uppercase;
-  margin-right: 10px;
   text-align: center;
   margin-left: 20px;
-  margin-bottom: 20px;
   margin-top: 5px;
 }
 
