--- a/css/style.sass
+++ b/css/style.sass
@@ -238,6 +238,42 @@ table.iksweb td,table.iksweb th
 .picture 
   grid-area: picture
 
+.form-container 
+    width: 1200px
+    height: 450px  
+    background-color: black
+    text-align: center
+
+input 
+    outline:0 !important
+
+input[type="text"]
+    width: 245px
+    height: 50px
+    color: #8F8F8F
+    background-color: #272727
+input[type="email"]
+    width: 245px
+    height: 50px
+    color: #8F8F8F
+    background-color: #272727
+
+.name
+    margin-top: 10px
+
+.email
+    margin-top: 10px
+
+.message 
+    margin-top: 10px
+
+
+input[name="message"]   
+    width: 628px
+    height: 240px
+    color: #8F8F8F
+    background-color: #272727
+
 .button1 
     grid-area: button1
     text-decoration: none
@@ -314,7 +350,8 @@ table.iksweb td,table.iksweb th
         margin-left: 20px
         font-size: 20px
 
-.send 
+input[type="button"]
+        width: 632px
         grid-area: send
         text-decoration: none
         color: white
@@ -325,13 +362,11 @@ table.iksweb td,table.iksweb th
         padding-bottom: 12px
         font-weight: bold
         text-transform: uppercase
-        margin-right: 10px
         text-align: center
         margin-left: 20px
-        margin-bottom: 20px
         margin-top: 5px
-
-::placeholder
+        &:hover 
+            color:yellow
 
 .section7 
     display: grid
