--- a/css/style.sass
+++ b/css/style.sass
@@ -58,7 +58,7 @@ h4
     &-nav 
         grid-area: header-nav
         justify-self: right
-        font-size: 200ox
+        font-size: 20px
         font-weight: bold
 
         &__link
@@ -91,6 +91,7 @@ h4
 
     &-text
         margin-right: 20px
+        margin-bottom: 20px
         grid-area: section2-text
         position: absolute
         display: grid
@@ -108,14 +109,12 @@ h4
             grid-area: section2-text-description
         &-download
             grid-area: section2-text-download
-            align-self: center
             text-transform: uppercase
         &-line
             grid-area: section2-text-line
-            align-self: center
         &-line2
             grid-area: section2-text-line2
-            align-self: center
+
 
 .section3
     position: relative
@@ -201,7 +200,6 @@ table.iksweb
     width: 100%
 
 table.iksweb th
-    font-weight: 50px
     font-size: 22px 
     color:#ffffff
     background-color:#9B0921
@@ -345,7 +343,6 @@ input[name="message"]
 
 .message 
         grid-area: message
-        align-self: left
         color: white
         margin-left: 20px
         font-size: 20px
